<resources>
    <string name="app_name">CARROT</string>

    <!-- SignActivity -->
    <string name="sign_upin">회원가입/로그인</string>
    <string name="description">당근마켓은 휴대폰 번호로 가입해요. 번호는 <b>안전하게 보관되며</b> 어디에도 공개되지 않아요.</string>
    <string name="phone_number_input">휴대폰 번호를 입력해주세요</string>
    <string name="send_verify_message_button"><b>인증문자 받기</b></string>
    <string name="resend_verify_message_button"><b>인증문자 다시 받기</b></string>
    <string name="verify_number_input">인증번호를 입력해주세요</string>
    <string name="term_text"><u>이용약관</u></string>
    <string name="mit">및</string>
    <string name="rule_personal_info_text"><u>개인정보취급방침</u></string>
    <string name="agree_and_start_button"><b>동의하고 시작하기</b></string>
    <string name="description_carrot_image">carrot image</string>

    <!-- StartActivity -->
    <string name="select_location_button"><b>내 동네 설정하고 시작하기</b></string>

    <!-- SelectLocationActivity -->
    <string name="search_input">내 동네 이름으로 검색</string>
    <string name="find_location_button"><b>현재 위치로 찾기</b></string>
    <string name="no_result_text">검색 결과가 없습니다.\n동네 이름을 다시 확인해주세요!</string>

    <!-- ProfileActivity -->
    <string name="profile_toolbar">프로필 입력</string>
    <string name="next_text">다음</string>
    <string name="nickname_input">닉네임을 입력해주세요.</string>
    <string name="advice_text">당근마켓은 신뢰를 기반으로 하는 지역 커뮤니티입니다.\n프로필 사진과 닉네임을 입력해주세요.</string>

    <!-- FragmentMain -->
    <string name="location_auth_advice_text">xx님, xx 근처 xx명의\n이웃과 중고거래를 시작해보세요. :)</string>
    <string name="location_auth_button"><b>동네인증하고 시작하기</b></string>

    <!-- menu_bottom_navigation.xml -->
    <string name="home_navigation">홈</string>
    <string name="category_navigation">카테고리</string>
    <string name="write_navigation">글쓰기</string>
    <string name="chat_navigation">채팅</string>
    <string name="my_carrot_navigation">나의 당근</string>

    <!-- CategoryFragment -->
    <string name="category">카테고리</string>

    <!-- MyCarrotFragment -->
    <string name="location_setting_text">내 동네 설정</string>
    <string name="location_certification_text">동네 인증하기</string>
    <string name="keyword_alarm_text">키워드 알림</string>
    <string name="collect_all_text">모아보기</string>
    <string name="invite_friend_text">친구초대</string>
    <string name="share_carrot_market_text">당근마켓 공유</string>
    <string name="notice_text">공지사항</string>
    <string name="user_center_text">고객센터</string>
    <string name="app_setting_text">앱 설정</string>
    <string name="see_profile_button"><b>프로필 보기</b></string>
    <string name="sell_list_text">판매내역</string>
    <string name="buy_list_text">구매내역</string>
    <string name="want_list_text">관심목록</string>

    <!-- WriteBottomSheetDialog -->
    <string name="used_transaction"><b>중고거래</b></string>
    <string name="used_transaction_detail">중고 물건을 판매할 수 있어요</string>
    <string name="community_promotion"><b>동네홍보</b></string>
    <string name="community_promotion_detail">업체소개, 부동산, 농수산물 등을 올릴 수 있어요</string>

    <!-- SuggestLoginDialog -->
    <string name="suggest_login_text"><b>가입하고 xx동\n중고 상품을 구경하세요!</b></string>
    <string name="login_button"><b>로그인하기</b></string>
    <string name="no_login_text">둘러보기</string>

    <!-- SettingMainActivity -->
    <string name="logout_dialog_title">로그아웃</string>
    <string name="logout_dialog_message">로그아웃 하시겠습니까?\n주의: 저장했던 모든 설정이 초기화됩니다.</string>
    <string name="logout_dialog_negative">취소</string>
    <string name="logout_dialog_positive">확인</string>

    <!-- WriteUsedActivity -->
    <string name="write_used_transaction"><b>중고거래 글쓰기</b></string>
    <string name="write_next_text">완료</string>
    <string name="write_used_image_count_text">xx/10</string>
    <string name="write_used_title_input">제목</string>
    <string name="write_used_category_text">카테고리</string>
    <string name="write_used_price_text">₩</string>
    <string name="write_used_price_input">가격 (선택사항)</string>
    <string name="write_used_price_suggest_check">가격 제안 받기</string>
    <string name="write_used_content_input">xx동에 올릴 게시글 내용을 작성해주세요.\n가품 및 판매금지품목은 게시가 제한될 수 있어요.</string>
    <string name="write_used_near_location_text">xx동과 <u>yy칸 떨어진</u> 동네</string>

    <!-- WritePromotionActivity -->
    <string name="write_community_promotion"><b>동네홍보 글쓰기</b></string>
    <string name="write_community_text">완료</string>
    <string name="write_community_image_count_text">xx/10</string>
    <string name="write_community_title_input">제목</string>
    <string name="write_community_category_text">카테고리</string>
    <string name="write_community_price_text">₩</string>
    <string name="write_community_price_input">가격 (선택사항)</string>
    <string name="write_community_phone_input">전화번호 입력 (선택사항)</string>
    <string name="write_community_chat_check">채팅 안 받기</string>
    <string name="write_community_content_input">xx동 근처 주민들에게 홍보하고 싶은 내용을 작성해주세요. 작성 후 광고 상품을 구매하면 홈 목록의 광고 영역에 게시글을 노출할 수 있어요.</string>

    <!-- SettingLocationActivity -->
    <string name="location_setting_toolbar"><b>내 동네 설정</b></string>
    <string name="select_location_area_toolbar"><b>게시글 보여줄 동네 고르기</b></string>
    <string name="near_location_text"><b>xx동과 <u>yy칸 떨어진</u> 동네</b></string>
    <string name="near_location_hint">선택한 동네의 이웃들만 피드에서 이 게시글을 볼 수 있어요</string>
    <string name="my_location_text">내동네</string>
    <string name="other_location_text">근처동네</string>
    <string name="select_location_text">동네 선택</string>
    <string name="select_location_description_text">지역은 최소 1개 이상 최대 2개까지 설정 가능해요</string>

    <!-- WriteUsedCategoryDialog, WriteCommunityCategoryDialog -->
    <string name="category_digital">디지털/가전</string>
    <string name="category_furniture">가구/인테리어</string>
    <string name="category_baby">유아동/유아도서</string>
    <string name="category_life_food">생활/가공식품</string>
    <string name="category_female_cloth">여성의류</string>
    <string name="category_female">여성잡화</string>
    <string name="category_beauty">뷰티/미용</string>
    <string name="category_male">남성패션/잡화</string>
    <string name="category_sport">스포츠/레저</string>
    <string name="category_game">게임/취미</string>
    <string name="category_book">도서/티켓/음반</string>
    <string name="category_animal">반려동물용품</string>
    <string name="category_etc">기타 중고물품</string>
    <string name="category_buy">삽니다</string>

    <string name="category_car">중고차/오토바이</string>
    <string name="category_person">동네 구인구직</string>
    <string name="category_land">부동산</string>
    <string name="category_nature_food">농수산물</string>
    <string name="category_company">지역업체 소개</string>
    <string name="category_study">과외/클래스 모집</string>
    <string name="category_party">전시/공연/행사</string>

    <!-- DetailFragment -->
    <string name="detail_profile_name">사용자 이름</string>
    <string name="detail_profile_location">지역</string>
    <string name="detail_item_info_title_text">제목</string>
    <string name="detail_item_info_category_time_text">xx · yy</string>
    <string name="detail_item_info_content_text">내용</string>
    <string name="detail_contact_chat_count_text">채팅 xx개</string>
    <string name="detail_contact_favorite_count_text">관심 xx</string>
    <string name="detail_contact_look_count_text">조회 xx</string>
    <string name="detail_report_text">이 게시글 신고하기</string>
    <string name="detail_other_text">xx님의 판매 상품</string>
    <string name="detail_other_all_text">모두보기</string>
    <string name="detail_price_text">xx원</string>
    <string name="detail_possible_suggestion_text">가격제안 xx</string>
    <string name="detail_transaction_with_chat_button">채팅으로 거래하기</string>

    <!-- item_uploaded_item.xml -->
    <string name="item_title_text">제목</string>
    <string name="item_location_text">xx · yy</string>
    <string name="item_price_text">xx원</string>

    <!-- SettingMainActivity -->
    <string name="setting_title"><b>설정</b></string>
    <string name="setting_sign_out">로그아웃</string>

    <!-- fragment_category -->
    <string name="category_used_transaction"><b>중고거래</b></string>
    <string name="category_community_promotion"><b>동네홍보</b></string>
    <string name="category_best_item">인기매물</string>

    <!-- SettingCategoryActivity -->
    <string name="category_setting_title_text"><b>관심 카테고리 설정</b></string>
    <string name="category_setting_content_text">홈 화면에서 보고 싶지 않은 카테고리는\n체크를 해제하세요</string>
    <string name="category_setting_description_text">최소 1개 이상 선택되어 있어야 합니다.</string>

</resources>
