<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home_navigation"/>
    <item
        android:id="@+id/action_category"
        android:icon="@drawable/ic_category"
        android:enabled="true"
        android:title="@string/category_navigation"/>
    <item
        android:id="@+id/action_write"
        android:icon="@drawable/ic_write"
        android:enabled="true"
        android:title="@string/write_navigation"/>
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat"
        android:enabled="true"
        android:title="@string/chat_navigation"/>
    <item
        android:id="@+id/action_my_carrot"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/my_carrot_navigation"/>
</menu>