<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_car"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_person"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_land"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_land"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_nature_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_nature_food"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_company"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_study"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_party"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category_party"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>