<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorDefaultBackground"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_upin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDarkBackground"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".SignActivity">


        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/description_carrot_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lineSpacingMultiplier="1.2"
                android:paddingVertical="16dp"
                android:paddingStart="16dp"
                android:singleLine="false"
                android:text="@string/description"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/decorate_input_default"
            android:hint="@string/phone_number_input"
            android:inputType="phone"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_layout" />

        <Button
            android:id="@+id/send_verify_message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/decorate_button_inactive"
            android:text="@string/send_verify_message_button"
            android:textColor="@color/colorDefaultBackground"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_input" />

        <EditText
            android:id="@+id/verify_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/decorate_input_default"
            android:hint="@string/verify_number_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_verify_message_button" />

        <LinearLayout
            android:id="@+id/term_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_number_input">

            <TextView
                android:id="@+id/term_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_text"
                android:textColor="#505050"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/mit"
                android:textColor="#505050"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/rule_personal_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule_personal_info_text"
                android:textColor="#505050"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


        <Button
            android:id="@+id/agree_and_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/decorate_button_inactive"
            android:text="@string/agree_and_start_button"
            android:textColor="@color/colorDefaultBackground"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/term_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>