<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/location_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/location_setting_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_certification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/location_certification_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyword_alarm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/keyword_alarm_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/collect_all_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/collect_all_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/invite_friend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/invite_friend_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_carrot_market_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/share_carrot_market_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/notice_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/user_center_text"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@color/colorDefaultBackground">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/app_setting_text"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>



</ScrollView>